--- a/mood-meter/src/App.css
+++ b/mood-meter/src/App.css
@@ -1,27 +1,21 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  background-color: black;
   min-height: 100vh;
+}
+
+
+.App-Header {
+  background-color: #5F01E9;
+  min-height: 15vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
   font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 25px;
+  border:2px solid grey;
+  box-shadow: 10px 2px 10px grey;
 }
 
 .App-link {
