--- a/mood-meter/src/App.css
+++ b/mood-meter/src/App.css
@@ -18,15 +18,17 @@
   box-shadow: 10px 2px 10px grey;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+.login{
+  background-color: grey;
+  width:33%;
+  border: 2px solid white;
+  border-radius: 15px;
+  
+  margin: 8% 62%;
+}
+.well-btn{
+  border: 2px solid black;
 }
