--- a/mood-meter/src/App.css
+++ b/mood-meter/src/App.css
@@ -2,20 +2,25 @@
   text-align: center;
   background-color: black;
   min-height: 100vh;
+  width:1024px;
+  margin: 0 auto;
 }
 
 
 .App-Header {
   background-color: #5F01E9;
   min-height: 15vh;
+  max-width:80%;
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
+  align-items: center;
   justify-content: space-between;
   font-size: calc(10px + 2vmin);
+  margin:0 auto;
   padding: 25px;
   border:2px solid grey;
-  box-shadow: 10px 2px 10px grey;
+  box-shadow: 0px 2px 10px grey;
+  border-radius: 15px;
 }
 
 
@@ -25,10 +30,6 @@
   background-color: grey;
   width:33%;
   border: 2px solid white;
-  border-radius: 15px;
-  
-  margin: 8% 62%;
-}
-.well-btn{
-  border: 2px solid black;
+  margin: 8% 57%;
+  border-radius:15px;
 }
