--- a/mood-meter/src/App.css
+++ b/mood-meter/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: black;
+  /* background-color: black; */
   min-height: 100vh;
 }
 
@@ -26,7 +26,7 @@
   width:33%;
   border: 2px solid white;
   border-radius: 15px;
-  
+
   margin: 8% 62%;
 }
 .well-btn{
