--- a/mood-meter/src/App.css
+++ b/mood-meter/src/App.css
@@ -40,9 +40,23 @@
 .graph-quadrant_container {
   border: 3px solid green;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.graph-quadrant {
+  display: flex;
+  max-width: 30%;
   flex-wrap: wrap;
 }
 
-.bubble-button_container {
-  border: 1px solid rgb(0, 9, 128);
+.graph-quadrant_row {
+  display: flex;
+  justify-content: center;
 }
+
+
+.bubble-button_container {
+
+}
+
